reflected the refactor made to NNTrainingPackage

--- a/LcnExperiment.ipynb
+++ b/LcnExperiment.ipynb
@@ -266,6 +266,63 @@
   },
   {
    "cell_type": "markdown",
+   "source": [
+    "# 1. Data pre-processing"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "from NeuralNetworksTrainingPackage.event_handler import dataPreProcessingEventEmitter\n",
+    "from NeuralNetworksTrainingPackage.dataprocessing.basic_pre_processing import filterCardinality, quantileTransform, trunctuateData\n",
+    "from NeuralNetworksTrainingPackage.dataprocessing.basic_pre_processing import oneHotEncodePredictors, oneHotEncodeTargets, toDataFrame\n",
+    "\n",
+    "n_sample = 20000\n",
+    "quantile_transform_distribution='uniform'\n",
+    "\n",
+    "\n",
+    "data_pre_processing = dataPreProcessingEventEmitter()\n",
+    "\n",
+    "filter_cardinality = filterCardinality()\n",
+    "data_pre_processing.add_pre_processing('regression', filter_cardinality)\n",
+    "data_pre_processing.add_pre_processing('classification', filter_cardinality)\n",
+    "\n",
+    "quantile_transform = quantileTransform(output_distribution = quantile_transform_distribution)\n",
+    "data_pre_processing.add_pre_processing('regression', quantile_transform)\n",
+    "data_pre_processing.add_pre_processing('classification', quantile_transform)\n",
+    "\n",
+    "trunctuate_data = trunctuateData(n = n_sample)\n",
+    "data_pre_processing.add_pre_processing('regression', trunctuate_data)\n",
+    "data_pre_processing.add_pre_processing('classification', trunctuate_data)\n",
+    "\n",
+    "one_hot_encode_predictors = oneHotEncodePredictors()\n",
+    "data_pre_processing.add_pre_processing('regression', one_hot_encode_predictors)\n",
+    "data_pre_processing.add_pre_processing('classification', one_hot_encode_predictors)\n",
+    "\n",
+    "one_hot_encode_targets = oneHotEncodeTargets()\n",
+    "data_pre_processing.add_pre_processing('classification', one_hot_encode_targets)\n",
+    "\n",
+    "to_data_frame = toDataFrame()\n",
+    "data_pre_processing.add_pre_processing('regression', to_data_frame)\n",
+    "data_pre_processing.add_pre_processing('classification', to_data_frame )"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "id": "RBYDfcuJE-bP",
     "pycharm": {
@@ -273,7 +330,7 @@
     }
    },
    "source": [
-    "# 1. Defining the experiment"
+    "# 2. Defining the experiment"
    ]
   },
   {
@@ -729,6 +786,8 @@
     }
    ],
    "source": [
+    "from NeuralNetworksTrainingPackage.dataprocessing.basic_pre_processing import get_train_val_test, CustomDataset\n",
+    "from NeuralNetworksTrainingPackage.metrics.basic_metrics import calc_metrics\n",
     "from models.LcnNetwork import *\n",
     "from training.LcnTrain import *\n",
     "\n",
@@ -751,11 +810,13 @@
     "\n",
     "  print('---- Loading datasets ----')\n",
     "  X, y, categorical_indicator, attribute_names = ex.opml_load_task(run_info['mtpair_task'])\n",
-    "  train_data, val_data, test_data = get_train_val_test(X, y, categorical_indicator, attribute_names, #values from ex.openml_load_task\n",
-    "                                                      split = [0.5, 0.25, 0.25],\n",
-    "                                                      trunctuate = 20000 ,\n",
-    "                                                      seed = args.seed,\n",
-    "                                                      args = args) # Returns CustomDataset obj instances\n",
+    "  data_pre_processing.set_seed_for_all(args.seed)\n",
+    "  train_data, val_data, test_data = get_train_val_test(X, y, categorical_indicator, attribute_names,\n",
+    "                                                       data_pre_processing = data_pre_processing,\n",
+    "                                                       task = 'regression',\n",
+    "                                                       model = run_info.get('model'),\n",
+    "                                                       split = [0.5, 0.25, 0.25],\n",
+    "                                                       args = args)) # Returns CustomDataset obj instances\n",
     "\n",
     "\n",
     "\n",
