optimised get_all for LcnRegressionMetrics

--- a/LcnExperiment.ipynb
+++ b/LcnExperiment.ipynb
@@ -1539,7 +1539,7 @@
     "        with torch.no_grad():\n",
     "            model.eval()\n",
     "            #test_loss = 0\n",
-    "            # dataset_len = 0\n",
+    "            #dataset_len = 0\n",
     "            \n",
     "            roc_auc_accumulator = BinaryAUROC(num_tasks=2)\n",
     "            acc_accumulator = BinaryAUROC()\n",
@@ -1591,11 +1591,10 @@
     "\n",
     "            if test_set_name:\n",
     "                assert isinstance(test_set_name, str), \"test_set_name must be a string, such as 'train', 'val', 'test'\"\n",
-    "                loss_name = f'{test_set_name}_loss'\n",
     "                metrics_name = f'{test_set_name}_metrics'\n",
-    "                final_metrics = {loss_name: test_loss, metrics_name: metrics}\n",
+    "                final_metrics = {metrics_name: metrics}\n",
     "            else:\n",
-    "                final_metrics = {'loss': test_loss, 'metrics': metrics}\n",
+    "                final_metrics = {'metrics': metrics}\n",
     "\n",
     "            return final_metrics\n",
     "\n",
@@ -2601,7 +2600,6 @@
    "authorship_tag": "ABX9TyO6d7scFvmxtcd+gePzcxnN",
    "provenance": []
   },
-  "instance_type": "ml.g4dn.xlarge",
   "kernelspec": {
    "display_name": "Python 3 (PyTorch 2.0.0 Python 3.10 GPU Optimized)",
    "language": "python",
