--- a/LcnExperiment.ipynb
+++ b/LcnExperiment.ipynb
@@ -703,7 +703,7 @@
     "one_hot_encode_predictors = oneHotEncodePredictors(transform = 'all')\n",
     "one_hot_encode_targets = oneHotEncodeTargets(transform = 'all')\n",
     "to_data_frame = toDataFrame(transform = 'all')\n",
-    "split_train_val_test = splitTrainValTest(split = split, transform = 'all')\n",
+    "split_train_val_test = splitTrainValTest(split = split)\n",
     "quantile_transform = quantileTransform(output_distribution = quantile_transform_distribution, transform = 'train')\n",
     "\n",
     "\n",
