big refactor to unify work

--- a/LcnExperiment.ipynb
+++ b/LcnExperiment.ipynb
@@ -708,21 +708,21 @@
     "\n",
     "\n",
     "# Transformations will be called in the order they're added to data_pre_processing\n",
-    "data_pre_processing.add_pre_processing('regression', filter_cardinality)\n",
-    "data_pre_processing.add_pre_processing('regression', trunctuate_data)\n",
-    "data_pre_processing.add_pre_processing('regression', one_hot_encode_predictors)\n",
-    "data_pre_processing.add_pre_processing('regression', to_data_frame)\n",
-    "data_pre_processing.add_pre_processing('regression', split_train_val_test)\n",
-    "data_pre_processing.add_pre_processing('regression', quantile_transform)\n",
+    "data_pre_processing.add_pre_processing_step('regression', filter_cardinality)\n",
+    "data_pre_processing.add_pre_processing_step('regression', trunctuate_data)\n",
+    "data_pre_processing.add_pre_processing_step('regression', one_hot_encode_predictors)\n",
+    "data_pre_processing.add_pre_processing_step('regression', to_data_frame)\n",
+    "data_pre_processing.add_pre_processing_step('regression', split_train_val_test)\n",
+    "data_pre_processing.add_pre_processing_step('regression', quantile_transform)\n",
     "\n",
     "\n",
-    "data_pre_processing.add_pre_processing('classification', filter_cardinality)\n",
-    "data_pre_processing.add_pre_processing('classification', trunctuate_data)\n",
-    "data_pre_processing.add_pre_processing('classification', one_hot_encode_predictors)\n",
-    "data_pre_processing.add_pre_processing('classification', one_hot_encode_targets)\n",
-    "data_pre_processing.add_pre_processing('classification', to_data_frame)\n",
-    "data_pre_processing.add_pre_processing('classification', split_train_val_test)\n",
-    "data_pre_processing.add_pre_processing('classification', quantile_transform)"
+    "data_pre_processing.add_pre_processing_step('classification', filter_cardinality)\n",
+    "data_pre_processing.add_pre_processing_step('classification', trunctuate_data)\n",
+    "data_pre_processing.add_pre_processing_step('classification', one_hot_encode_predictors)\n",
+    "data_pre_processing.add_pre_processing_step('classification', one_hot_encode_targets)\n",
+    "data_pre_processing.add_pre_processing_step('classification', to_data_frame)\n",
+    "data_pre_processing.add_pre_processing_step('classification', split_train_val_test)\n",
+    "data_pre_processing.add_pre_processing_step('classification', quantile_transform)"
    ],
    "metadata": {
     "collapsed": false,
@@ -749,34 +749,24 @@
    "outputs": [],
    "source": [
     "from NeuralNetworksTrainingPackage.dataprocessing.basic_pre_processing import CustomDataset, toPyTorchDatasets\n",
-    "from data_cleaning.LcnProcessing import editArgs\n",
     "\n",
-    "edit_args = editArgs()\n",
     "to_pytorch_datasets = toPyTorchDatasets(wrapper = CustomDataset)\n",
     "\n",
     "# Transformations will be called after general pre-processing steps, and in order they're added\n",
-    "data_pre_processing.add_pre_processing('LCN_reg_SGD', edit_args)\n",
-    "data_pre_processing.add_pre_processing('LCN_reg_SGD', to_pytorch_datasets)\n",
+    "data_pre_processing.add_pre_processing_step('LCN_reg_SGD', to_pytorch_datasets)\n",
     "\n",
-    "data_pre_processing.add_pre_processing('LCN_reg_AMSGrad', edit_args)\n",
-    "data_pre_processing.add_pre_processing('LCN_reg_AMSGrad', to_pytorch_datasets)\n",
+    "data_pre_processing.add_pre_processing_step('LCN_reg_AMSGrad', to_pytorch_datasets)\n",
     "\n",
-    "data_pre_processing.add_pre_processing('LLN_reg_SGD', edit_args)\n",
-    "data_pre_processing.add_pre_processing('LLN_reg_SGD', to_pytorch_datasets)\n",
+    "data_pre_processing.add_pre_processing_step('LLN_reg_SGD', to_pytorch_datasets)\n",
     "\n",
-    "data_pre_processing.add_pre_processing('LLN_reg_AMSGrad', edit_args)\n",
-    "data_pre_processing.add_pre_processing('LLN_reg_AMSGrad', to_pytorch_datasets)\n",
+    "data_pre_processing.add_pre_processing_step('LLN_reg_AMSGrad', to_pytorch_datasets)\n",
     "\n",
-    "data_pre_processing.add_pre_processing('LCN_cls_SGD', edit_args)\n",
-    "data_pre_processing.add_pre_processing('LCN_cls_SGD', to_pytorch_datasets)\n",
+    "data_pre_processing.add_pre_processing_step('LCN_cls_SGD', to_pytorch_datasets)\n",
     "\n",
-    "data_pre_processing.add_pre_processing('LCN_cls_AMSGrad', edit_args)\n",
     "data_pre_processing.add_pre_processing('LCN_cls_AMSGrad', to_pytorch_datasets)\n",
     "\n",
-    "data_pre_processing.add_pre_processing('LLN_cls_SGD', edit_args)\n",
     "data_pre_processing.add_pre_processing('LLN_cls_SGD', to_pytorch_datasets)\n",
     "\n",
-    "data_pre_processing.add_pre_processing('LLN_cls_AMSGrad', edit_args)\n",
     "data_pre_processing.add_pre_processing('LLN_cls_AMSGrad', to_pytorch_datasets)"
    ],
    "metadata": {
@@ -832,7 +822,47 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# 5. Main Experiment loop"
+    "# 5. Model Training routine"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "from models.LcnNetwork import init_LcnNetwork\n",
+    "from training.LcnTrain import LcnTrainingRoutine\n",
+    "\n",
+    "lcn_model_and_training = {'model_init':init_LcnNetwork, 'training_routine': LcnTrainingRoutine}\n",
+    "\n",
+    "model_training_pairs = {\n",
+    "    'LCN_reg_SGD': lcn_model_and_training,\n",
+    "    'LCN_reg_AMSGrad': lcn_model_and_training,\n",
+    "    'LLN_reg_SGD': lcn_model_and_training,\n",
+    "    'LLN_reg_AMSGrad': lcn_model_and_training,\n",
+    "    'LCN_cls_SGD': lcn_model_and_training,\n",
+    "    'LCN_cls_AMSGrad': lcn_model_and_training,\n",
+    "    'LLN_cls_SGD': lcn_model_and_training,\n",
+    "    'LLN_cls_AMSGrad': lcn_model_and_training,\n",
+    "}"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# 6. Main Experiment loop"
    ],
    "metadata": {
     "collapsed": false,
@@ -857,30 +887,28 @@
    },
    "outputs": [],
    "source": [
-    "from models.LcnNetwork import get_alpha\n",
-    "from models.LcnNetwork import Net as LCN\n",
     "from training.LcnTrain import Hyperparams, train\n",
     "\n",
+    "\n",
+    "torch_models = ('LCN_reg_SGD', 'LCN_reg_AMSGrad', 'LLN_reg_SGD', 'LLN_reg_AMSGrad', 'LCN_cls_SGD','LCN_cls_AMSGrad', 'LLN_cls_SGD','LLN_cls_AMSGrad')\n",
+    "\n",
+    "sklearn_models = ()\n",
     "\n",
     "for i in range(14160):\n",
     "    print(f'==== Begin run:{i} ====')\n",
     "    run_info = ex.begin_run_sticky()\n",
     "\n",
-    "    task = run_info['hyp']['task']\n",
+    "    hyperparameters = run_info['hyp']\n",
     "    model = run_info['model']\n",
-    "    seed = run_info['hyp']['seed']\n",
-    "    no_cuda = run_info['hyp']['no_cuda']\n",
     "\n",
-    "    use_cuda = not no_cuda and torch.cuda.is_available()\n",
-    "    device = torch.device(\"cuda\" if use_cuda else \"cpu\")\n",
+    "    task = hyperparameters['task']\n",
+    "    seed = hyperparameters['seed']\n",
+    "\n",
+    "\n",
     "\n",
     "    torch.manual_seed(seed)\n",
     "    np.random.seed(seed)\n",
     "\n",
-    "    if model.startswith(('LCN', 'LLN')):\n",
-    "        args = Hyperparams(**run_info.get('hyp'))\n",
-    "    else:\n",
-    "        args = None\n",
     "\n",
     "    print('---- Loading datasets ----')\n",
     "    X, y, categorical_indicator, attribute_names = ex.opml_load_task(run_info['mtpair_task'])\n",
@@ -889,7 +917,7 @@
     "    data_pre_processing.set_seed_for_all(seed)\n",
     "    data_pre_processing.set_dataset(X, y, categorical_indicator, attribute_names)\n",
     "    data_pre_processing.apply(task)\n",
-    "    data_pre_processing.apply(model, args = args)\n",
+    "    data_pre_processing.apply(model)\n",
     "    train_data, val_data, test_data = data_pre_processing.get_train_val_test()\n",
     "\n",
     "\n",
@@ -897,76 +925,68 @@
     "    metrics_calculator = metric_model_pairs[model][task]\n",
     "\n",
     "\n",
-    "    # ======== Model specific code =====================\n",
-    "    model = LCN(input_dim= args.input_dim,\n",
-    "                output_dim= args.output_dim, \n",
-    "                hidden_dim= args.hidden_dim, \n",
-    "                num_layer= args.depth, \n",
-    "                num_back_layer= args.back_n, \n",
-    "                dense= True,\n",
-    "                drop_type= args.drop_type,\n",
-    "                net_type= args.net_type,\n",
-    "                approx= args.anneal).to(device)\n",
+    "    match model:\n",
+    "        case sklearn_models:\n",
+    "            pass\n",
     "\n",
-    "    train_batch_size = run_info['hyp']['batch_size']\n",
-    "    train_dataloader = torch.utils.data.DataLoader(train_data, batch_size=train_batch_size,shuffle= True)\n",
-    "    val_dataloader = torch.utils.data.DataLoader(val_data,batch_size=len(val_data),shuffle= True)\n",
-    "    test_dataloader = torch.utils.data.DataLoader(test_data,batch_size=len(test_data),shuffle= True)\n",
+    "        case torch_models:\n",
+    "            # hyperparameters will be updated with {'input_dim': num_columns_X, 'output_dim':num_columns_Y}\n",
+    "            hyperparameters.update(train_data.get_dims())\n",
+    "\n",
+    "            train_batch_size = hyperparameters['batch_size']\n",
+    "            train_dataloader = torch.utils.data.DataLoader(train_data, batch_size=train_batch_size,shuffle= True)\n",
+    "            val_dataloader = torch.utils.data.DataLoader(val_data,batch_size=len(val_data),shuffle= True)\n",
+    "            test_dataloader = torch.utils.data.DataLoader(test_data,batch_size=len(test_data),shuffle= True)\n",
     "\n",
     "\n",
-    "    if args.optimizer == 'SGD':\n",
-    "        optimizer = torch.optim.SGD(model.parameters(), lr=args.lr, momentum=args.momentum, nesterov=True)\n",
-    "    elif args.optimizer == 'AMSGrad':\n",
-    "        optimizer = torch.optim.Adam(model.parameters(), lr=args.lr, amsgrad=True)\n",
-    "    scheduler = torch.optim.lr_scheduler.StepLR(optimizer, step_size=args.lr_step_size, gamma=args.gamma)\n",
+    "            init_model = model_training_pairs[model]['model_init']\n",
+    "            TrainingRoutine = model_training_pairs[model]['training_routine']\n",
     "\n",
     "\n",
+    "            model = init_model(**hyperparameters)\n",
+    "            training_routine = TrainingRoutine(**hyperparameters)\n",
     "\n",
-    "    start_epoch = 1  # start from epoch 1 or last checkpoint epoch\n",
-    "    if args.anneal == 'approx':\n",
-    "        args.net_type = 'approx_' + args.net_type\n",
+    "            start_epoch = 1  # start from epoch 1 or last checkpoint epoch\n",
+    "            total_epochs = hyperparameters['epochs']\n",
+    "            start_time = time.time()\n",
+    "\n",
+    "            for epoch in range(start_epoch, total_epochs + start_epoch):\n",
+    "                print(f\"----{epoch}th training epoch ----\")\n",
+    "                epoch_metrics = {}\n",
+    "\n",
+    "                training_routine.scheduler_step(epoch)\n",
+    "                train_loss = training_routine.train(model, train_dataloader)\n",
     "\n",
     "\n",
-    "    start_time = time.time()\n",
-    "    for epoch in range(start_epoch, args.epochs + start_epoch):\n",
-    "        print(f\"----{epoch}th training epoch ----\")\n",
-    "        epoch_metrics = {}\n",
+    "                if train_loss is None:\n",
+    "                    print('---Stopping training due to loss being nan!---')\n",
+    "                    epoch_metrics = {'train_loss': train_loss, 'epoch': epoch}\n",
+    "                    ex.update_run(epoch_metrics)\n",
+    "                    break\n",
     "\n",
-    "        scheduler.step(epoch)\n",
+    "                if epoch == args.epochs:\n",
+    "                    continue\n",
     "\n",
-    "        alpha = get_alpha(epoch, args.epochs)\n",
-    "        train_loss = train(args, model, device, train_dataloader, optimizer, epoch, args.anneal, alpha) # Returns None if NaN encountered during the training\n",
+    "                epoch_metrics.update(train_loss)\n",
+    "                epoch_metrics.update({'epoch': epoch})\n",
+    "                ex.update_run(epoch_metrics)\n",
     "\n",
-    "        # Handling NaN case\n",
-    "        if train_loss is None:\n",
-    "            print('---Stopping training due to loss being nan!---')\n",
-    "            epoch_metrics = {'train_loss': train_loss, 'epoch': epoch}\n",
-    "            ex.update_run(epoch_metrics)\n",
-    "            break\n",
+    "            else:\n",
+    "                final_metrics = {}\n",
+    "                training_time = time.time()-start_time\n",
     "\n",
-    "        if epoch == args.epochs:\n",
-    "            continue\n",
+    "                train_metrics = metrics_calculator.get_metrics(args, model, device, train_dataloader, 'train')\n",
+    "                val_all_metrics = metrics_calculator.get_all(args, model, device, val_dataloader, 'val')\n",
+    "                test_all_metrics = metrics_calculator.get_all(args, model, device, test_dataloader, 'test')\n",
     "\n",
-    "        epoch_metrics.update(train_loss)\n",
-    "        epoch_metrics.update({'epoch': epoch})\n",
-    "        ex.update_run(epoch_metrics)\n",
+    "                final_metrics.update(train_loss)\n",
+    "                final_metrics.update(train_metrics)\n",
+    "                final_metrics.update(val_all_metrics)\n",
+    "                final_metrics.update(test_all_metrics)\n",
+    "                final_metrics.update({'epoch': epoch})\n",
+    "                final_metrics.update({'epoch_time': training_time})\n",
     "\n",
-    "    else:\n",
-    "        final_metrics = {}\n",
-    "        training_time = time.time()-start_time\n",
-    "\n",
-    "        train_metrics = metrics_calculator.get_metrics(args, model, device, train_dataloader, 'train')\n",
-    "        val_all_metrics = metrics_calculator.get_all(args, model, device, val_dataloader, 'val')\n",
-    "        test_all_metrics = metrics_calculator.get_all(args, model, device, test_dataloader, 'test')\n",
-    "\n",
-    "        final_metrics.update(train_loss)\n",
-    "        final_metrics.update(train_metrics)\n",
-    "        final_metrics.update(val_all_metrics)\n",
-    "        final_metrics.update(test_all_metrics)\n",
-    "        final_metrics.update({'epoch': epoch})\n",
-    "        final_metrics.update({'epoch_time': training_time})\n",
-    "        \n",
-    "        ex.update_run(final_metrics)\n",
+    "                ex.update_run(final_metrics)\n",
     "\n",
     "    ex.end_run()"
    ]
@@ -1155,6 +1175,87 @@
     "run_info = ex.begin_run()\n",
     "run_info"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "    # ======== Model specific code =====================\n",
+    "    model = LCN(input_dim= args.input_dim,\n",
+    "                output_dim= args.output_dim,\n",
+    "                hidden_dim= args.hidden_dim,\n",
+    "                num_layer= args.depth,\n",
+    "                num_back_layer= args.back_n,\n",
+    "                dense= True,\n",
+    "                drop_type= args.drop_type,\n",
+    "                net_type= args.net_type,\n",
+    "                approx= args.anneal).to(device)\n",
+    "\n",
+    "    train_batch_size = run_info['hyp']['batch_size']\n",
+    "    train_dataloader = torch.utils.data.DataLoader(train_data, batch_size=train_batch_size,shuffle= True)\n",
+    "    val_dataloader = torch.utils.data.DataLoader(val_data,batch_size=len(val_data),shuffle= True)\n",
+    "    test_dataloader = torch.utils.data.DataLoader(test_data,batch_size=len(test_data),shuffle= True)\n",
+    "\n",
+    "\n",
+    "    if args.optimizer == 'SGD':\n",
+    "        optimizer = torch.optim.SGD(model.parameters(), lr=args.lr, momentum=args.momentum, nesterov=True)\n",
+    "    elif args.optimizer == 'AMSGrad':\n",
+    "        optimizer = torch.optim.Adam(model.parameters(), lr=args.lr, amsgrad=True)\n",
+    "    scheduler = torch.optim.lr_scheduler.StepLR(optimizer, step_size=args.lr_step_size, gamma=args.gamma)\n",
+    "\n",
+    "\n",
+    "\n",
+    "    start_epoch = 1  # start from epoch 1 or last checkpoint epoch\n",
+    "    start_time = time.time()\n",
+    "    for epoch in range(start_epoch, args.epochs + start_epoch):\n",
+    "        print(f\"----{epoch}th training epoch ----\")\n",
+    "        epoch_metrics = {}\n",
+    "\n",
+    "        scheduler.step(epoch)\n",
+    "\n",
+    "        alpha = get_alpha(epoch, args.epochs)\n",
+    "        train_loss = train(args, model, device, train_dataloader, optimizer, epoch, args.anneal, alpha)\n",
+    "\n",
+    "\n",
+    "        if train_loss is None:\n",
+    "            print('---Stopping training due to loss being nan!---')\n",
+    "            epoch_metrics = {'train_loss': train_loss, 'epoch': epoch}\n",
+    "            ex.update_run(epoch_metrics)\n",
+    "            break\n",
+    "\n",
+    "        if epoch == args.epochs:\n",
+    "            continue\n",
+    "\n",
+    "        epoch_metrics.update(train_loss)\n",
+    "        epoch_metrics.update({'epoch': epoch})\n",
+    "        ex.update_run(epoch_metrics)\n",
+    "\n",
+    "    else:\n",
+    "        final_metrics = {}\n",
+    "        training_time = time.time()-start_time\n",
+    "\n",
+    "        train_metrics = metrics_calculator.get_metrics(args, model, device, train_dataloader, 'train')\n",
+    "        val_all_metrics = metrics_calculator.get_all(args, model, device, val_dataloader, 'val')\n",
+    "        test_all_metrics = metrics_calculator.get_all(args, model, device, test_dataloader, 'test')\n",
+    "\n",
+    "        final_metrics.update(train_loss)\n",
+    "        final_metrics.update(train_metrics)\n",
+    "        final_metrics.update(val_all_metrics)\n",
+    "        final_metrics.update(test_all_metrics)\n",
+    "        final_metrics.update({'epoch': epoch})\n",
+    "        final_metrics.update({'epoch_time': training_time})\n",
+    "\n",
+    "        ex.update_run(final_metrics)\n",
+    "\n",
+    "    ex.end_run()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
