fixed a few typos

--- a/LcnExperiment.ipynb
+++ b/LcnExperiment.ipynb
@@ -53,8 +53,8 @@
       "\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\n",
       "\u001b[0mNote: you may need to restart the kernel to use updated packages.\n",
       "Collecting git+https://github.com/DanielWarfield1/TabularExperimentTrackerClient\n",
-      "  Cloning https://github.com/DanielWarfield1/TabularExperimentTrackerClient to /tmp/pip-req-build-ty8y7215\n",
-      "  Running command git clone --filter=blob:none --quiet https://github.com/DanielWarfield1/TabularExperimentTrackerClient /tmp/pip-req-build-ty8y7215\n",
+      "  Cloning https://github.com/DanielWarfield1/TabularExperimentTrackerClient to /tmp/pip-req-build-no5od2fa\n",
+      "  Running command git clone --filter=blob:none --quiet https://github.com/DanielWarfield1/TabularExperimentTrackerClient /tmp/pip-req-build-no5od2fa\n",
       "  Resolved https://github.com/DanielWarfield1/TabularExperimentTrackerClient to commit 780933411aa8c4e394478a26dec4a39447f8f012\n",
       "  Preparing metadata (setup.py) ... \u001b[?25ldone\n",
       "\u001b[?25hRequirement already satisfied: openml in /opt/conda/lib/python3.10/site-packages (from TabularExperimentTrackerClient==0.0.1) (0.14.1)\n",
@@ -83,8 +83,8 @@
       "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n",
       "Note: you may need to restart the kernel to use updated packages.\n",
       "Collecting git+https://github.com/Bartosz-G/NeuralNetworksTrainingPackage\n",
-      "  Cloning https://github.com/Bartosz-G/NeuralNetworksTrainingPackage to /tmp/pip-req-build-j28tv_us\n",
-      "  Running command git clone --filter=blob:none --quiet https://github.com/Bartosz-G/NeuralNetworksTrainingPackage /tmp/pip-req-build-j28tv_us\n",
+      "  Cloning https://github.com/Bartosz-G/NeuralNetworksTrainingPackage to /tmp/pip-req-build-g_7bwon3\n",
+      "  Running command git clone --filter=blob:none --quiet https://github.com/Bartosz-G/NeuralNetworksTrainingPackage /tmp/pip-req-build-g_7bwon3\n",
       "  Resolved https://github.com/Bartosz-G/NeuralNetworksTrainingPackage to commit a7560190bf2fa1bcc85ece0b20c27bdfe44ad679\n",
       "  Preparing metadata (setup.py) ... \u001b[?25ldone\n",
       "\u001b[?25hRequirement already satisfied: numpy in /opt/conda/lib/python3.10/site-packages (from NeuralNetworksTrainingPackage==1.0.0) (1.23.5)\n",
@@ -108,8 +108,8 @@
       "Requirement already satisfied: mpmath>=0.19 in /opt/conda/lib/python3.10/site-packages (from sympy->torch->NeuralNetworksTrainingPackage==1.0.0) (1.3.0)\n",
       "Building wheels for collected packages: NeuralNetworksTrainingPackage\n",
       "  Building wheel for NeuralNetworksTrainingPackage (setup.py) ... \u001b[?25ldone\n",
-      "\u001b[?25h  Created wheel for NeuralNetworksTrainingPackage: filename=NeuralNetworksTrainingPackage-1.0.0-py3-none-any.whl size=9632 sha256=6d0adcdf6db53d8aba908c933989809c55c83a4c05a6061c3c6b4e571d3de6e6\n",
-      "  Stored in directory: /tmp/pip-ephem-wheel-cache-wbmg53k7/wheels/82/01/e8/da81de869be2f6b8c193a6fc5c42ee3ff0b6b97a7b70cd565a\n",
+      "\u001b[?25h  Created wheel for NeuralNetworksTrainingPackage: filename=NeuralNetworksTrainingPackage-1.0.0-py3-none-any.whl size=9632 sha256=3306987312f61aef0da99fcd64490e327f730d47d0ad98417e1cd1bc4387ecb2\n",
+      "  Stored in directory: /tmp/pip-ephem-wheel-cache-q3t_tc7_/wheels/82/01/e8/da81de869be2f6b8c193a6fc5c42ee3ff0b6b97a7b70cd565a\n",
       "Successfully built NeuralNetworksTrainingPackage\n",
       "Installing collected packages: NeuralNetworksTrainingPackage\n",
       "Successfully installed NeuralNetworksTrainingPackage-1.0.0\n",
@@ -863,24 +863,23 @@
      "output_type": "stream",
      "text": [
       "==== Begin run:0 ====\n",
-      "{'_id': '65007ec28c4167ff9e410a52', 'metrics_per_epoch': [], 'experiment_id': '64f0f2556e02727fe9a6ff59', 'experiment_name': 'experiment_LCN_1', 'mtpair_index': 27, 'mtpair_model': 'LLN_reg_AMSGrad', 'mtpair_task': '336-361079', 'is_completed': False, 'user_id': '64d3a7457658d6ec6db139d0', 'user_name': 'bart', 'hyp': {'depth': 11, 'seed': 42, 'drop_type': 'none', 'p': 0.5002795325575716, 'ensemble_n': 1, 'shrinkage': 1, 'back_n': 1, 'net_type': 'locally_linear', 'hidden_dim': 1, 'anneal': 'approx', 'optimizer': 'AMSGrad', 'batch_size': 64, 'epochs': 30, 'lr': 0.05869614999569959, 'momentum': 0.9, 'no_cuda': False, 'lr_step_size': 20, 'gamma': 0.1, 'task': 'regression'}, 'model': 'LLN_reg_AMSGrad', 'task': '336-361079'}\n",
-      "5007ec28c4167ff9e410a5\n",
+      "{'_id': '65007fbd3e5d8f014a740449', 'metrics_per_epoch': [], 'experiment_id': '64f0f2556e02727fe9a6ff59', 'experiment_name': 'experiment_LCN_1', 'mtpair_index': 51, 'mtpair_model': 'LLN_reg_AMSGrad', 'mtpair_task': '336-361085', 'is_completed': False, 'user_id': '64d3a7457658d6ec6db139d0', 'user_name': 'bart', 'hyp': {'depth': 3, 'seed': 42, 'drop_type': 'none', 'p': 0.5784440037962089, 'ensemble_n': 1, 'shrinkage': 1, 'back_n': 1, 'net_type': 'locally_linear', 'hidden_dim': 1, 'anneal': 'none', 'optimizer': 'AMSGrad', 'batch_size': 16, 'epochs': 30, 'lr': 0.15459763486796993, 'momentum': 0.9, 'no_cuda': False, 'lr_step_size': 10, 'gamma': 0.1, 'task': 'regression'}, 'model': 'LLN_reg_AMSGrad', 'task': '336-361085'}\n",
+      "5007fbd3e5d8f014a74044\n",
       "---- Loading datasets ----\n",
-      "downloading task 336-361079\n",
-      "task different than previous task, downloading...\n",
-      "----1th training epoch ----\n"
+      "downloading task 336-361085\n",
+      "task different than previous task, downloading...\n"
      ]
     },
     {
-     "ename": "TypeError",
-     "evalue": "LcnTrainingRoutine.get_optimizer_scheduler() missing 1 required positional argument: 'model'",
+     "ename": "AttributeError",
+     "evalue": "'LcnTrainingRoutine' object has no attribute 'optimizer_obj'",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[15], line 65\u001b[0m\n\u001b[1;32m     62\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m----\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mepoch\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124mth training epoch ----\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     63\u001b[0m epoch_metrics \u001b[38;5;241m=\u001b[39m {}\n\u001b[0;32m---> 65\u001b[0m \u001b[43mtraining_routine\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mscheduler_step\u001b[49m\u001b[43m(\u001b[49m\u001b[43mepoch\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     66\u001b[0m train_loss \u001b[38;5;241m=\u001b[39m training_routine\u001b[38;5;241m.\u001b[39mtrain(model, train_dataloader)\n\u001b[1;32m     69\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m train_loss \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n",
-      "File \u001b[0;32m~/non-homogenous-paper/training/LcnTrain.py:93\u001b[0m, in \u001b[0;36mLcnTrainingRoutine.scheduler_step\u001b[0;34m(self, epoch)\u001b[0m\n\u001b[1;32m     91\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mscheduler_step\u001b[39m(\u001b[38;5;28mself\u001b[39m, epoch):\n\u001b[1;32m     92\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39moptimizer \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m---> 93\u001b[0m         \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_optimizer_scheduler\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     95\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mscheduler \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m     96\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mscheulder\u001b[38;5;241m.\u001b[39mstep(epoch)\n",
-      "\u001b[0;31mTypeError\u001b[0m: LcnTrainingRoutine.get_optimizer_scheduler() missing 1 required positional argument: 'model'"
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[15], line 57\u001b[0m\n\u001b[1;32m     54\u001b[0m model \u001b[38;5;241m=\u001b[39m init_model(\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mhyperparameters)\n\u001b[1;32m     55\u001b[0m training_routine \u001b[38;5;241m=\u001b[39m TrainingRoutine(\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mhyperparameters)\n\u001b[0;32m---> 57\u001b[0m \u001b[43mtraining_routine\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mset_optimizer_scheduler\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     59\u001b[0m start_epoch \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m  \u001b[38;5;66;03m# start from epoch 1 or last checkpoint epoch\u001b[39;00m\n\u001b[1;32m     60\u001b[0m total_epochs \u001b[38;5;241m=\u001b[39m hyperparameters[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mepochs\u001b[39m\u001b[38;5;124m'\u001b[39m]\n",
+      "File \u001b[0;32m~/non-homogenous-paper/training/LcnTrain.py:89\u001b[0m, in \u001b[0;36mLcnTrainingRoutine.set_optimizer_scheduler\u001b[0;34m(self, model)\u001b[0m\n\u001b[1;32m     87\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39moptimizer_str \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mAMSGrad\u001b[39m\u001b[38;5;124m'\u001b[39m:\n\u001b[1;32m     88\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39moptimizer \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39moptim\u001b[38;5;241m.\u001b[39mAdam(model\u001b[38;5;241m.\u001b[39mparameters(), lr\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mlr, amsgrad\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[0;32m---> 89\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mscheduler \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39moptim\u001b[38;5;241m.\u001b[39mlr_scheduler\u001b[38;5;241m.\u001b[39mStepLR(\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43moptimizer_obj\u001b[49m, step_size\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mlr_step_size, gamma\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mgamma)\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'LcnTrainingRoutine' object has no attribute 'optimizer_obj'"
      ]
     }
    ],
@@ -943,7 +942,7 @@
     "            model = init_model(**hyperparameters)\n",
     "            training_routine = TrainingRoutine(**hyperparameters)\n",
     "            \n",
-    "            training_routine.set_optimizer_scheduler(mod\n",
+    "            training_routine.set_optimizer_scheduler(model)\n",
     "\n",
     "            start_epoch = 1  # start from epoch 1 or last checkpoint epoch\n",
     "            total_epochs = hyperparameters['epochs']\n",
