--- a/LcnExperiment.ipynb
+++ b/LcnExperiment.ipynb
@@ -881,6 +881,17 @@
    },
    "outputs": [],
    "source": [
+    "y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
     "def get_metrics(model, test_loader, hyperparameters, test_set_name=None):\n",
     "        if test_set_name:\n",
     "            assert isinstance(test_set_name, str), \"test_set_name must be a string, such as train, val, test\"\n",
@@ -1760,11 +1771,11 @@
    "authorship_tag": "ABX9TyO6d7scFvmxtcd+gePzcxnN",
    "provenance": []
   },
-  "instance_type": "ml.t3.medium",
+  "instance_type": "ml.g4dn.xlarge",
   "kernelspec": {
-   "display_name": "Python 3 (Data Science)",
+   "display_name": "Python 3 (PyTorch 2.0.0 Python 3.10 GPU Optimized)",
    "language": "python",
-   "name": "python3__SAGEMAKER_INTERNAL__arn:aws:sagemaker:eu-west-2:712779665605:image/datascience-1.0"
+   "name": "python3__SAGEMAKER_INTERNAL__arn:aws:sagemaker:eu-west-2:712779665605:image/pytorch-2.0.0-gpu-py310"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1776,7 +1787,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
